# augury

./: README.md
apps/backend/: pyproject.toml
apps/backend/app/: main.py  parser.py
apps/backend/app/detectors/: attitude.py
