[project]
name = "augury"
version = "0.1.0"
description = "AI flight analyser — LangGraph pipeline for ArduPilot crash forensics and real-time failure prediction"
authors = [
    {name = "beingglitch",email = "surajshukla5604@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pymavlink (>=2.4.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
